[gd_scene load_steps=18 format=2]

[ext_resource path="res://Menú/background.png" type="Texture" id=1]
[ext_resource path="res://Menú/buttonss.png" type="Texture" id=3]
[ext_resource path="res://Menú/buttons.png" type="Texture" id=6]
[ext_resource path="res://Menu.gd" type="Script" id=7]
[ext_resource path="res://Font/Adventurer.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Audios/Game Jam Title Screen.wav" type="AudioStream" id=11]
[ext_resource path="res://sfx/Click.wav" type="AudioStream" id=14]
[ext_resource path="res://sfx/Cursor.wav" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=10]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=4]
resource_name = "FadeCreditos"

[sub_resource type="Animation" id=5]
resource_name = "Nubes"

[sub_resource type="Animation" id=6]
resource_name = "Parrallax"
length = 60.0

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]

[node name="fondo" type="Sprite" parent="Sprite"]
position = Vector2( 513.247, 300 )
scale = Vector2( 0.532034, 0.555556 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = 322.0
margin_top = 205.0
margin_right = 974.0
margin_bottom = 393.0
custom_fonts/font = SubResource( 10 )
text = "Genios de
 Alcantarillas"
align = 1
valign = 1

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 99.0
margin_top = 332.0
margin_right = 198.0
margin_bottom = 372.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton2"]
margin_right = 99.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 99.0
margin_top = 464.0
margin_right = 198.0
margin_bottom = 504.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton3"]
margin_left = -2.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
align = 1
valign = 1

[node name="cursor" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeCreditos = SubResource( 4 )
anims/Nubes = SubResource( 5 )
anims/Parrallax = SubResource( 6 )
anims/fade = SubResource( 7 )
anims/fadeblack = SubResource( 8 )
anims/fadeblackexit = SubResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="TextureButton2" to="." method="_on_TextureButton2_mouse_entered"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="mouse_entered" from="TextureButton3" to="." method="_on_TextureButton3_mouse_entered"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
